--- a/2020.md
+++ b/2020.md
@@ -1,6 +1,6 @@
 # BlackRaven Dojo 2020
 
-The Proposed changes for BR Dojo in 2020. The main intent is to separate out the basics as a seperate prelimiary course, and make the main course non-linear, i.e. someone who completes basic can join the main course immediately during any module, and graduates a year later when they have completed the rest of the modules and the course has cycled back to the module they joined on again. 
+The Proposed changes for BR Dojo in 2020. The main intent is to separate out the basics as a seperate prelimiary course, and make the main course non-linear, i.e. someone who completes basic can join the main course immediately during any module, and graduates a year later when they have completed the rest of the modules and the course has cycled back to the module they originally joined. 
 
 ## Structure
 
@@ -18,7 +18,7 @@ Class size maximum 10. Runs continuously throughout the year (1hr/week) with ass
 
 ### Course - "Everyone's always a beginner"
 
-No maximum class size. Class runs Jan-Nov, any studen who has completed Basic can join at any time.
+No maximum class size. Class runs Jan-Nov, any student who has completed Basic can join at any time.
 
 * Advanced Programming Paradigms & Software Methodologies - '101 ways to shoot yourself in the foot'
 * Unix, File systems and storage - 'But it's Only a Gigabyte'
